--- a/client/web/package.json
+++ b/client/web/package.json
@@ -13,6 +13,7 @@
     "nuxt": "^3.5.1"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.7.0"
+    "@nuxtjs/tailwindcss": "^6.7.0",
+    "@pinia/nuxt": "^0.4.11"
   }
 }
